--- a/SimpleObjectDb/SimpleObjectDb.csproj
+++ b/SimpleObjectDb/SimpleObjectDb.csproj
@@ -9,11 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.18.0" />
+    <PackageReference Include="Npgsql" Version="6.0.13" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="db\postgresql\" />
   </ItemGroup>
 
 </Project>
