--- a/SimpleObjectDb/SimpleObjectDb.csproj
+++ b/SimpleObjectDb/SimpleObjectDb.csproj
@@ -2,15 +2,18 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.18.0" />
-    <PackageReference Include="Npgsql" Version="6.0.13" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Basses.SimpleDocumentStore.PostgreSql\Basses.SimpleDocumentStore.PostgreSql.csproj" />
+    <ProjectReference Include="..\Basses.SimpleDocumentStore.SqlServer\Basses.SimpleDocumentStore.SqlServer.csproj" />
   </ItemGroup>
 
 </Project>
