--- a/Basses.SimpleDocumentStore.PostgreSql/Basses.SimpleDocumentStore.PostgreSql.csproj
+++ b/Basses.SimpleDocumentStore.PostgreSql/Basses.SimpleDocumentStore.PostgreSql.csproj
@@ -1,13 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <ApplicationIcon>simple_document_store.ico</ApplicationIcon>
     <Title>$(AssemblyName)</Title>
     <Authors>Sebastian Søndergaard</Authors>
-    <Description>Easy way to store objects as documents using either raw files or PostgreSql as backing.
+    <Description>Easy way to store objects as documents using either raw files or PostgreSql as backing solution.
 By using this you will have real persistency without any effort, this gives you time to fully implement your solution while postponing the desision of the actual data storage solution until the very last minute.
 In some cases you may even find that using this is sufficient as the actual store solution. Especially in small application where high performance is not required.
 </Description>
@@ -16,6 +18,7 @@ In some cases you may even find that using this is sufficient as the actual stor
     <PackageTags>document;store;database;nosql;postgres;postgresql;json</PackageTags>
     <PackageReleaseNotes>Initial version</PackageReleaseNotes>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
