--- a/Basses.SimpleDocumentStore.Tests/Basses.SimpleDocumentStore.Tests.csproj
+++ b/Basses.SimpleDocumentStore.Tests/Basses.SimpleDocumentStore.Tests.csproj
@@ -1,20 +1,30 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.18.0" />
+    <PackageReference Include="coverlet.collector" Version="6.0.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageReference Include="Testcontainers.MsSql" Version="4.7.0" />
+    <PackageReference Include="Testcontainers.PostgreSql" Version="4.7.0" />
+    <PackageReference Include="xunit" Version="2.9.2" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Basses.SimpleDocumentStore.PostgreSql\Basses.SimpleDocumentStore.PostgreSql.csproj" />
     <ProjectReference Include="..\Basses.SimpleDocumentStore.SqlServer\Basses.SimpleDocumentStore.SqlServer.csproj" />
     <ProjectReference Include="..\Basses.SimpleDocumentStore\Basses.SimpleDocumentStore.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Using Include="Xunit" />
   </ItemGroup>
 
 </Project>
