--- a/SimpleObjectDb/SimpleObjectDb.csproj
+++ b/SimpleObjectDb/SimpleObjectDb.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.18.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
