--- a/Basses.SimpleDocumentStore/Basses.SimpleDocumentStore.csproj
+++ b/Basses.SimpleDocumentStore/Basses.SimpleDocumentStore.csproj
@@ -15,13 +15,19 @@ In some cases you may even find that using this is sufficient as the actual stor
     <Authors>Sebastian Søndergaard</Authors>
     <PackageIcon>simple_document_store.png</PackageIcon>
     <PackageTags>document;store;database;nosql;file;files;json</PackageTags>
-    <PackageReleaseNotes>Initial version</PackageReleaseNotes>
+    <PackageReleaseNotes>$([System.IO.File]::ReadAllText("RELEASE_NOTES.txt"))</PackageReleaseNotes>
+    <RepositoryUrl>https://github.com/SebastianSoendergaard/SimpleObjectDb.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="RELEASE_NOTES.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="..\RELEASE_NOTES.txt" Link="RELEASE_NOTES.txt" />
     <Content Include="simple_document_store.ico" />
   </ItemGroup>
 
